--- a/res/layout/menuquiz.xml
+++ b/res/layout/menuquiz.xml
@@ -8,10 +8,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <ListView
-        android:id="@+id/lvutama"
+    <Button
+        android:id="@+id/btnquiz1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:text="QUIZ 1"
+        />
+    
+    <Button
+        android:id="@+id/btnquiz2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="QUIZ 2"
+        android:layout_below="@+id/btnquiz1"
         />
     
     
